--- a/kotlin/pom.xml
+++ b/kotlin/pom.xml
@@ -35,6 +35,12 @@
 			<version>${kotlin.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.18.1</version>
+			<scope>test</scope>
+		</dependency>
 		<!--        <dependency>-->
 		<!--            <groupId>io.kotest</groupId>-->
 		<!--            <artifactId>kotest-runner-junit5-jvm</artifactId>-->
