--- a/kotlin2020/pom.xml
+++ b/kotlin2020/pom.xml
@@ -9,7 +9,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>io.mendirl.adventofcode kotlin2020</name>
+	<name>io.mendirl.adventofcode20 kotlin2020</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
