--- a/kotlin2021/pom.xml
+++ b/kotlin2021/pom.xml
@@ -9,11 +9,12 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>io.mendirl.adventofcode kotlin2021</name>
+	<name>io.mendirl.adventofcode20 kotlin2021</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kotlin.version>1.6.0</kotlin.version>
+<!--		<kotlin.version>1.6.0</kotlin.version>-->
+		<kotlin.version>1.5.32</kotlin.version>
 		<kotlin.code.style>official</kotlin.code.style>
 	</properties>
 
